--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,21 +75,21 @@ jobs:
           fi
 
       - name: Terraform Init
-        working-directory: terraform/lambda
+        working-directory: terraform/bot
         run: terraform init -backend-config="${{ github.event.inputs.environment }}.backend" -reconfigure
 
       - name: Terraform Format
-        working-directory: terraform/lambda
+        working-directory: terraform/bot
         run: terraform fmt -check
 
       - name: Terraform Plan
-        working-directory: terraform/lambda
+        working-directory: terraform/bot
         env:
           TF_VAR_image_tag: ${{ env.SHORT_SHA }}
         run: terraform plan -input=false -var-file="${{ github.event.inputs.environment }}.tfvars"
 
       - name: Terraform Apply
-        working-directory: terraform/lambda
+        working-directory: terraform/bot
         env:
           TF_VAR_image_tag: ${{ env.SHORT_SHA }}
         run: terraform apply -auto-approve -input=false -var-file="${{ github.event.inputs.environment }}.tfvars"
