--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,7 @@ jobs:
       - name: Package Lambda function
         run: |
           cd lambda
+          mkdir -p ../terraform/lambda
           zip -r ../terraform/lambda/lambda.zip .
 
       - name: Setup Terraform
